Fixed bug in CSS of component view: result text wraps now.

--- a/app/assets/stylesheets/apps/_component.less
+++ b/app/assets/stylesheets/apps/_component.less
@@ -52,6 +52,13 @@
 				padding: 4px 20px 4px 7px;
 				border-bottom: 1px solid rgba(0,0,0,.05);
 				font: @monospaceFont;
+				white-space: -moz-pre-wrap !important;  /* Mozilla, since 1999 */
+				white-space: -pre-wrap;      /* Opera 4-6 */
+				white-space: -o-pre-wrap;    /* Opera 7 */
+				white-space: pre-wrap;       /* css-3 */
+				word-wrap: break-word;       /* Internet Explorer 5.5+ */
+				word-break: break-all;
+				white-space: normal;
 				-webkit-user-select: text;
 				.removeSingleResult {
 					.removeButton();
